fix book titles to wrap on home page

--- a/src/components/Book/Book.css
+++ b/src/components/Book/Book.css
@@ -3,7 +3,9 @@
   background-color: white;
   border-radius: 1rem;
   height: 600px;
+  width: 250px;
   padding: 20px;
+  text-wrap: wrap;
 }
 
 .book button {
